--- a/src/base.css
+++ b/src/base.css
@@ -7,7 +7,7 @@ html{
 
 *, *::before, *::after{
     box-sizing: inherit;
-    margin: 4px;
+    /* margin: 4px; */
     padding: 0;
 }
 
@@ -15,6 +15,6 @@ body{
     font-family: 'Ubuntu', sans-serif;
     padding: 0;
     margin: 0;
-    background-color: rgb(211, 225, 241);
+    background-color: rgb(255, 255, 255);
     color: rgb(97, 95, 95);
 }
