--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -3,7 +3,7 @@
   width: 600px;
 }
 .container{
-  position: relative;
+  /* position: relative; */
   display: flex;
   align-items: left;
   flex-direction: column;
