--- a/src/components/Notification/Notification.module.css
+++ b/src/components/Notification/Notification.module.css
@@ -7,8 +7,24 @@
   color: aliceblue;
   text-align: center;
   border-radius: 5px;
-  position: absolute;
+  position: fixed;
   right: 80px;
   top: 40px;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+}
+
+.enter{
+  transform: translateX(+100%);
+}
+.enterActive {
+  transform: translateX(0);
+  transition: all 250ms linear;
+}
+
+.exit{
+  transform: translateX(0);
+}
+.exitActive{
+  transform: translateX(+100%);
+  transition: all 250ms linear;
 }
